--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Register</h1>
-<form th:action=@"/register">
+<form th:action="@{/register}" method="post">
     Login:
     <input type="text" name="username">
     Password:
