--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Sign Up</title>
+    <title>Title</title>
 </head>
 <body>
 <h1>Register</h1>
@@ -11,7 +11,7 @@
     <input type="text" name="username">
     Password:
     <input type="text" name="password">
-    <input type="submit" value="sign up">
+    <input type="submit" value="sing up!">
 </form>
 
 </body>
